--- a/src/components/Footer/style/index.module.less
+++ b/src/components/Footer/style/index.module.less
@@ -1,8 +1,15 @@
 .footer {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  text-align: center;
+  padding: 16px 20px;
+  //height: 40px;
+  text-align: left;
   color: var(--color-text-2);
+  background-color: var(--color-bg-2);
+}
+
+.footer-left {
+  flex-grow: 1;
+}
+
+.footer-right {
 }
